  y = devel-series   - represents a set of planned features
  z = minor version  - version number of the current development series
  Rt = 'rx'          - stable release number x
  Rt = 'dx'  	     - development version

-----------------------------------------------------------------------

Last officially released version is -*> v1.7.9r13 <*-

25062000 (v1.8.0d14)
	- added: ecaconvert - a new ecatools app; converts a set of 
		 files to target file format
	- added: support for ALSA 0.6.x (plugin and direct) - thanks 
		 to Jeremy Hall for the patch
	- added: ia-mode - 'cs-list', 'c-list', 'aio-list',
		 'cop-list'; nothing new, but some might find these 
		 a bit more intuitive to use than various status cmds
	- added: more info about audio object status
	- added: --enable-sys-readline (compile against already 
		 installed libreadline)
	- added: rpm-spec file for PLD-Linux - ecasound.pld.spec
	- added: support for destdir env.variable - the last three
		 added features were submitted by wrobell
	- added: support for float samples (-f:f32_le and -f:f32_be)
	- added: support for IEEE754 wav files (float)
	- added: --enable-arts - use aRts daemon for audio input and
	  	 output, see ecasound(1) man page for more info
	- added: limiter effect (-eal:limit-%)
	- changed: major changes in source tree organization
	- changed: mp3 input and output now possible with all decoders
		   and encoders which support standards i/o streams;
		   still defaults to mpg123 and lame - see 
  	    	   ecasoundrc(5) for details
	- changed: qtecasound - all shortcut keys are now ctrl-some_key
23062000 (v1.7.9r13)  -** public release **-
	- fixed: stdin, stdout and '-' were all more or less broken
	- fixed: loop devices weren't saved correctly
05062000 (v1.7.8r12)  -** public release **-
	- added: files 'TODO' and 'ecasound.mdk.spec'
	- added: support for LADSPA_PATH env.variable
	- added: support for multichannel LADSPA plugins
	- added: -eli options, select a LADSPA plugin using its 