@@ -1,0 +1,13 @@
+Due to the recent Debian vs KDE vs Qt vs whoever debate, I want to
+make one addition to qtecasound's and libqtecasound's licensing. The 
+following is an exception to the GPL.
+
+As a special exception, you have permission to link this program
+with the Qt library and distribute executables, as long as you
+follow the requirements of the GNU GPL in regard to all of the
+software in the executable aside from Qt.
+
+This does not excuse you from the licensing terms of the Qt toolkit, 
+which must still be distributed per the terms of its own license.
+In all other situations concerning this software, GPL is applied.
+See the file 'COPYING'.
